@@ -6,16 +6,10 @@
       print $picture;
     }?>
 
- <span class="submitted"><?php print $submitted?></span>
-
+    <div class="taxonomy">
+        <?php print t('categories:').$terms ?>
+    </div>
     <?php if ($page == 0) { ?><h2 class="title"><a href="<?php print $node_url?>"><?php print $title?></a></h2><?php }; ?>
-   
-    
     <div class="content clear-block"><?php print $content?></div>
-    <?php if (($terms) && (($node->type == 'blog') || ($node->type == 'intranet'))): ?>
-      <div class="taxonomy">
-          <?php print t('categories:').$terms ?>
-      </div>
-    <?php endif; ?>
     <?php if ($links) { ?><div class="links">&raquo; <?php print $links?></div><?php }; ?>
   </div>
