@@ -1,5 +1,12 @@
 1.12
  - Imported from OTBNG theme and renamed
+ - node.tpl.php
+   o remove "Submitted by"
+   o show tags for all content types
+
+ - template.php
+   o output attachments as images, not a tables
+   o remove override for node_submitted
 
 1.11.devel
  - node.tpl.php
